--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span class="material-symbols-outlined ml24 cp fc-h1 transit3 mr8">
               phone
             </span>
-            Phone
+            9897962300
           </div>
         </div>
       </nav>
@@ -78,24 +78,24 @@
     <section class="quotes-slider">
       <div class="init-quotes-slider br8 bs3 ofh pr zi1">
         <div class="info-block">
-          <img src="images/25-year.jpg" alt="25-year" class="w72 brd1 mb12">
-          <h2 class="fs22 fw7 ff1 lh28">25+ Years Exeriance In jewellery Line</h2>
-          <p class="mtb16 lh20">Over 25 years mastering the art, crafting timeless jewelry with expertise and passion.</p>
+          <img src="images/25-year.jpg" alt="25-year" class="w72 brd2 mb12 br4">
+          <h2 class="fs22 fw7 lh30">25+ Years exeriance in jewellery line</h2>
+          <p class="mtb16 lh24 fc1">Over 25 years mastering the art, crafting timeless jewelry with expertise and passion.</p>
         </div>
       </div>
     </section>
 
     <section class="about-section pr" id="about">
       <div class="product-swiper-container wrapper aft">
-        <div class="heading-text ff1 fw6 mb48">
-          <h5 class="ttu mb12">About Mishyaan-Glitz</h5>
-          <h2 class="fs60 w50p lh72">Discover Mishyaan-Glitz's Unique Story</h2>
+        <div class="heading-text fw6 mb48">
+          <h5 class="ttu mb12 fc2">About Mishyaan-Glitz</h5>
+          <h2 class="fs60 w50p lh72 ff1">Discover Mishyaan-Glitz's Unique Story</h2>
         </div>
         <div class="product-content df jcsb pt32">
           <div class="additional-block df">
             <div class="banner-content p32 flx50 pr">
               <h2 class="banner-main-title ff1 fs28 fw6 mb16 lh30 bef">Our Distinctive Heritage</h2>
-              <p class="banner-description mb16 lh22 ls1">Explore the legacy of Mishyaan-Glitz, where tradition and innovation converge to craft timeless expressions of elegance. Our heritage is a testament to a rich history, blending cultural influences with contemporary design, shaping the narrative of our unique jewelry journey.</p>
+              <p class="banner-description mb16 lh24 fc1 ls1">Explore the legacy of Mishyaan-Glitz, where tradition and innovation converge to craft timeless expressions of elegance. Our heritage is a testament to a rich history, blending cultural influences with contemporary design, shaping the narrative of our unique jewelry journey.</p>
               <button class="banner-btn mt24 plr40 h48 br24 brd2 bg-no bg-h1 transit2">Learn More</button>
             </div>
             <div class="banner-img ofh flx50">
@@ -107,8 +107,8 @@
               <ul class="product-list df fdc">
                 <li class="product df pr mb32">
                   <div class="product-detail df fdc bef">
-                    <h5 class="product-title fs18 fw6 mb32 lh24"><a href="#">Crafting Excellence</a></h5>
-                    <p class="product-desc mb32 lh22">At Mishyaan-Glitz, we take pride in our commitment to craftsmanship. Each piece is meticulously crafted with precision, reflecting our dedication to quality and a passion for perfection. Our jewelry embodies the art of meticulous design and exquisite execution.
+                    <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Crafting Excellence</a></h5>
+                    <p class="product-desc mb32 lh24 fc1">We take pride in our commitment to craftsmanship. Each piece is meticulously crafted with precision, reflecting our dedication to quality and a passion for perfection. Our jewelry embodies the art of meticulous design and exquisite execution.
                     </p>
                   </div>
                   <div class="product-img br30 ofh"><img class="w100" src="images/products/product-01.webp"
@@ -117,8 +117,8 @@
                 </li>
                 <li class="product df pr mb32">
                   <div class="product-detail df fdc bef">
-                    <h5 class="product-title fs18 fw6 mb32 lh24"><a href="#">Beyond Jewelry</a></h5>
-                    <p class="product-desc mb32 lh22">Mishyaan-Glitz transcends the ordinary in the realm of jewelry. We offer more than adornments; we provide an embodiment of artistry, sophistication, and enduring style. Experience the fusion of traditional craftsmanship with modern aesthetics, defining a new standard of elegance in every piece.
+                    <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Beyond Jewelry</a></h5>
+                    <p class="product-desc mb32 fc1 lh24">Glitz transcends the ordinary in the realm of jewelry. We offer more than adornments; we provide an embodiment of artistry, sophistication, and enduring style. Experience the fusion of traditional craftsmanship with modern aesthetics, defining a new standard of elegance in every piece.
                     </p>
                   </div>
                   <div class="product-img br30 ofh"><img class="w100" src="images/products/product-02.webp"
@@ -136,10 +136,10 @@
       <div class="guarantee-container ptb100 df">
         <div class="guarantee-contant">
           <div class="guarantee-text p32 fc3 flx1">
-            <h5 class="sub-title ttu mb12 ff1 mb16">TIMELESS ASSURANCE</h5>
+            <h5 class="sub-title ttu mb12 fc2 mb16">TIMELESS ASSURANCE</h5>
             <h4 class="main-title fs60 ff1 mtb32 lh72"><span class="fc2">True Beauty</span> is with you. Express them.
             </h4>
-            <p class="galley-desc lh24 ">True Beauty is with you, an expression of elegance and confidence. Embrace individuality with our curated collection, celebrating your unique radiance and style.<br><br>Express your essence through timeless jewelry. Each piece is crafted to complement your authenticity, enhancing your inner and outer beauty with every adornment.</p>
+            <p class="galley-desc lh24">True Beauty is with you, an expression of elegance and confidence. Embrace individuality with our curated collection, celebrating your unique radiance and style.<br><br>Express your essence through timeless jewelry. Each piece is crafted to complement your authenticity, enhancing your inner and outer beauty with every adornment.</p>
           </div>
         </div>
         <div class="guarantee-img flx50">
@@ -148,18 +148,18 @@
       </div>
     </section>
 
-    <section class="product-section mtb48 " id="product">
-      <div class="wrapper ">
+    <section class="product-section" id="product">
+      <div class="wrapper mtb48 ptb48">
         <div class="heading-grp tac mb32">
-          <div class="ttu mb16 ff1 fw6">Our Guarantee</div>
+          <div class="ttu mb4 fc2 fw6">Our Guarantee</div>
           <h2 class="section-heading ff1 fs50 fw6 lh72">
             We Deals in
           </h2>
         </div>
         <div class="product-container df fww">
-          <article class="card flx25 mt24">
+          <article class="card flx25 mt24 mb48">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Rings</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">Rings</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -192,7 +192,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Bracelets</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">Stone Rings</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -225,7 +225,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Rings</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">flower Rings</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -258,7 +258,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Pendants & Chains</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">Chains</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -291,7 +291,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Jhumkas</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">Ear Tops</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -324,7 +324,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Ear Tops</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">Jhumkas</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -337,7 +337,7 @@
                     <img class="w100" src="images/products/product-10.webp" alt="product 01" data-index="1">
                   </li>
                   <li class="thumb-item box-center">
-                    <img class="w100" src="images/products/product-06.webp" alt="product 02" data-index="2">
+                    <img class="w100" src="images/products/product-09.webp" alt="product 02" data-index="2">
                   </li>
                   <li class="thumb-item box-center">
                     <img class="w100" src="images/products/product-13.webp" alt="product 03" data-index="3">
@@ -357,7 +357,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Pendant Set</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">Pendant Set</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -390,7 +390,7 @@
           </article>
           <article class="card flx25 mt24">
             <div class="card-details p16 tac">
-              <h3 class="card-heading ff1 fs24 lh34 fw5">Necklace Set</h3>
+              <h3 class="card-heading fc6 ttu fs24 lh34 fw5">bracelet</h3>
             </div>
             <div class="card-wrap br8 ofh mlr12 ">
               <div class="card-img br8 ofh pr" style="
@@ -427,9 +427,9 @@
 
     <section class="owner ptb100 mtb48 bg2" id="owner">
       <div class="wrapper2">
-        <div class="owner-text ff1 fw6 v-center fdc tac mb48">
+        <div class="owner-text fw6 v-center fdc tac mb48">
           <div class="ttu mb16">LEADER'S LEGACY</div>
-          <h2 class="fs50">Meet Our Founder</h2>
+          <h2 class="fs50 ff1">Meet Our Founder</h2>
         </div>
         <div class="owner-container df">
           <div class="owner-info flx25 bef pr zi1">
@@ -442,7 +442,7 @@
           </div>
           <div class="quote-detail flx1 bef aft pr box-center">
             <div class="text-quote mt80 pb24 plr64">
-              <p class="lh30">
+              <p class="lh30 fc1">
                 Embark on a journey through the world of exquisite jewelry with  Mr. Raja Arora, our esteemed founder, bringing 25 years of profound expertise to the industry. As a stalwart in the field,  Mr. Raja Arora has been instrumental in shaping our legacy of craftsmanship and innovation. Explore the narrative of passion, precision, and unparalleled experience woven into every facet of our jewelry journey, guided by the visionary leadership of  Mr. Raja Arora.
               </p>
             </div>
@@ -451,19 +451,19 @@
       </div>
     </section>
 
-    <section class="contact-form ptb48 " id="contact">
-      <div class="wrapper">
+    <section class="contact-form" id="contact">
+      <div class="wrapper ptb48">
         <div class="heading-grp tac">
-          <h1 class="section-heading fs50 ff1 fw6 lh34 mb24">Contact Us</h1>
-          <h3 class="section-sub-headign fs18">
-            Get in Touch – Reach Out for Collaborations, Inquiries, and More
+          <h3 class="section-sub-headign fs18 mb16 fc2 fw4">
+            Get in Touch
           </h3>
+          <h1 class="section-heading fs50 ff1 fw6 lh34 mb24">Contact Us</h1>
         </div>
         <div class="contact-form df ptb48">
           <div class="left-side flx50 brd-r1 p32">
             <div>
               <h3 class="ff1 fs28 fw6 mb16 lh30">Explore Mishyaan Glitz – Unveil Glamour!</h3>
-              <p class="call-us-content lh28 pt24">
+              <p class="call-us-content lh28 pt24 fc1">
                 Curious about Mishyaan Glitz? Dive into a world of sophistication and style. Discover the allure that awaits in our exquisite collection.
               </p>
             </div>
@@ -496,7 +496,7 @@
             </form>
           </div>
           <div class="flx1 p32">
-            <div class="call-us lh28 mb24">
+            <div class="call-us lh28 mb24 fc1">
               Feel free to reach out to us via phone or stop by our office
               anytime. We make it a priority to respond to all inquiries
               within 24 business hours. We are here to assist you with any
@@ -504,11 +504,11 @@
             </div>
             <div class="call-us">
               <h3 class="fw7 fs20">Our Address</h3>
-              <p class="mt12 lh28">C-25 Sector-8 Noida-201301, UP</p>
+              <p class="mt12 lh28 fc1">C-25 Sector-8 Noida-201301, UP</p>
             </div>
             <div class="already-member mt32">
               <h3 class="fw7 fs20">Our Mailbox:</h3>
-              <p class="mt12 lh28">info@example.com</p>
+              <p class="mt12 lh28 fc1">info@example.com</p>
             </div>
 
             <div class="find-answer mt32">
