--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
           </div>
           <div class="quote-detail flx1 bef aft pr box-center">
             <div class="text-quote mt80 pb24 plr64">
-              <p class="lh30 fc1">
+              <p class="lh30 fc1 fs18 fw3">
                 Embark on a journey through the world of exquisite jewelry with  Mr. Raja Arora, our esteemed founder, bringing 25 years of profound expertise to the industry. As a stalwart in the field,  Mr. Raja Arora has been instrumental in shaping our legacy of craftsmanship and innovation. Explore the narrative of passion, precision, and unparalleled experience woven into every facet of our jewelry journey, guided by the visionary leadership of  Mr. Raja Arora.
               </p>
             </div>
