--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     class="w100 br8 brd4 p16 h40 mlr4" required="">
                 </div>
                 <div class="df fww flx100 mb16">
-                  <textarea id="message" name="message" class="w100 br8 brd4 p16 mlr4" rows="4" placeholder="Message"
+                  <textarea id="message" name="message" class="message-box w100 br8 brd4 p16 mlr4" rows="4" placeholder="Message"
                     required=""></textarea>
                 </div>
                 <div class="flx1 df">
