--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="style-v01.css" />
+  <link rel="stylesheet" href="style01.css" />
 </head>
 
 <body>
@@ -85,21 +85,21 @@
       </div>
     </section>
 
-    <section class="about-section pr" id="about">
+    <section class="guarantee-section pr" id="guarantee">
       <div class="product-swiper-container wrapper aft">
         <div class="heading-text fw6 mb48">
-          <h5 class="ttu mb12 fc2">About Mishyaan-Glitz</h5>
-          <h2 class="fs60 w50p lh72 ff1">Discover Mishyaan-Glitz's Unique Story</h2>
+          <h5 class="ttu mb12 fc2">TIMELESS ASSURANCE</h5>
+          <h2 class="fs60 w50p lh72 ff1">Manufacture & Whole Seller and Retailer</h2>
         </div>
         <div class="product-content df jcsb pt32">
           <div class="additional-block df">
             <div class="banner-content p32 flx50 pr">
-              <h2 class="banner-main-title ff1 fs28 fw6 mb16 lh30 bef">Our Distinctive Heritage</h2>
-              <p class="banner-description mb16 lh24 fc1 ls1">Explore the legacy of Mishyaan-Glitz, where tradition and innovation converge to craft timeless expressions of elegance. Our heritage is a testament to a rich history, blending cultural influences with contemporary design, shaping the narrative of our unique jewelry journey.</p>
+              <h2 class="banner-main-title ff1 fs28 fw6 mb16 lh30 bef">Silver Utensils</h2>
+              <p class="banner-description mb16 lh24 fc1 ls1">Experience elegance in every meal with our exquisite range of silver utensils. From classic cutlery sets to intricate serving dishes, each piece is meticulously crafted to add a touch of luxury to your dining experience.</p>
               <button class="banner-btn mt24 plr40 h48 br24 brd2 bg-no bg-h1 transit2">Learn More</button>
             </div>
             <div class="banner-img ofh flx50">
-              <img class="w100 br8" src="images/img-1.jpg" alt="banner img">
+              <img class="w100 br8" src="images/silver-utensils.jpg" alt="banner img">
             </div>
           </div>
           <div class="main-block flx40">
@@ -107,24 +107,34 @@
               <ul class="product-list df fdc">
                 <li class="product df pr mb32">
                   <div class="product-detail df fdc bef">
-                    <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Crafting Excellence</a></h5>
-                    <p class="product-desc mb32 lh24 fc1">We take pride in our commitment to craftsmanship. Each piece is meticulously crafted with precision, reflecting our dedication to quality and a passion for perfection. Our jewelry embodies the art of meticulous design and exquisite execution.
+                    <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Cooper Aritical & Utensils</a></h5>
+                    <p class="product-desc mb32 lh24 fc1">Elevate your culinary experience with our stunning collection of copper articles and utensils. From timeless cookware to stylish kitchen accessories, each piece embodies craftsmanship and functionality, adding a touch of sophistication to your home.
                     </p>
                   </div>
-                  <div class="product-img br30 ofh"><img class="w100" src="images/products/product-01.webp"
+                  <div class="product-img br30 ofh"><img class="w100" src="images/coper-jewels.jpg"
                       alt="product image 01">
                   </div>
                 </li>
                 <li class="product df pr mb32">
                   <div class="product-detail df fdc bef">
-                    <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Beyond Jewelry</a></h5>
-                    <p class="product-desc mb32 fc1 lh24">Glitz transcends the ordinary in the realm of jewelry. We offer more than adornments; we provide an embodiment of artistry, sophistication, and enduring style. Experience the fusion of traditional craftsmanship with modern aesthetics, defining a new standard of elegance in every piece.
+                    <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Artificial Jewellery</a></h5>
+                    <p class="product-desc mb32 fc1 lh24">Elevate your style with our exquisite collection of artificial jewelry. From statement necklaces to elegant earrings, each piece is crafted to perfection, offering a touch of glamour and sophistication to every ensemble.
                     </p>
                   </div>
-                  <div class="product-img br30 ofh"><img class="w100" src="images/products/product-02.webp"
+                  <div class="product-img br30 ofh"><img class="w100" src="images/artificial-jewellery.jpg"
                       alt="product image 01">
                   </div>
                 </li>
+                <li class="product df pr mb32">
+                    <div class="product-detail df fdc bef">
+                      <h5 class="product-title fs18 fw6 mb16 lh24"><a href="#">Handicrafts</a></h5>
+                      <p class="product-desc mb32 fc1 lh24">Explore our diverse range of handicrafts, where traditional artistry meets contemporary design. From intricate sculptures to vibrant textiles, each piece is crafted with care, showcasing the rich cultural heritage and artistic traditions of our artisans.
+                      </p>
+                    </div>
+                    <div class="product-img br30 ofh"><img class="w100" src="images/handicrafts.jpg"
+                        alt="product image 01">
+                    </div>
+                  </li>
               </ul>
             </div>
           </div>
@@ -132,11 +142,12 @@
       </div>
     </section>
 
-    <section class="guarantee-section bg-img02 mt90" id="guarantee">
+    <section class="about-section" id="about">
+        <div class="bg-img02 mt90">
       <div class="guarantee-container ptb100 df">
         <div class="guarantee-contant">
           <div class="guarantee-text p32 fc3 flx1">
-            <h5 class="sub-title ttu mb12 fc2 mb16">TIMELESS ASSURANCE</h5>
+            <h5 class="sub-title ttu mb12 fc2 mb16">About Mishyaan-Glitz</h5>
             <h4 class="main-title fs60 ff1 mtb32 lh72"><span class="fc2">True Beauty</span> is with you. Express them.
             </h4>
             <p class="galley-desc lh24">True Beauty is with you, an expression of elegance and confidence. Embrace individuality with our curated collection, celebrating your unique radiance and style.<br><br>Express your essence through timeless jewelry. Each piece is crafted to complement your authenticity, enhancing your inner and outer beauty with every adornment.</p>
@@ -145,7 +156,7 @@
         <div class="guarantee-img flx50">
           <img class="w100" src="images/over-gallery.webp" alt="gallery-img">
         </div>
-      </div>
+      </div></div>
     </section>
 
     <section class="product-section" id="product">
