--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
     <section class="contact-form" id="contact">
       <div class="wrapper ptb48">
-        <div class="heading-grp tac">
+        <div class="heading-grp tac ptb40">
           <h3 class="section-sub-headign fs18 mb16 fc2 fw4">
             Get in Touch
           </h3>
@@ -474,7 +474,7 @@
           <div class="left-side flx50 brd-r1 p32">
             <div>
               <h3 class="ff1 fs28 fw6 mb16 lh30">Explore Mishyaan Glitz – Unveil Glamour!</h3>
-              <p class="call-us-content lh28 pt24 fc1">
+              <p class="call-us-content lh28 ptb40 fc1">
                 Curious about Mishyaan Glitz? Dive into a world of sophistication and style. Discover the allure that awaits in our exquisite collection.
               </p>
             </div>
